# liquidators

./: .gitignore  Cargo.toml  TODO  build.rs  build_wasm.sh  diff.json  diff.yaml  layout.txt  level.yaml  server  state.yaml
assets/: background_tile.aseprite  structure_tile.aseprite
assets/boat/: boat.xcf
assets/cat/: cat.aseprite
assets/grenade/: grenade.aseprite
assets/particles/: shotgun_muzzle_flash.aseprite
assets/player/walk/: animation_meta.json
assets/weapons/: pistol.aseprite
assets/weapons/pistol/: casing.aseprite
src/: arm.rs  blood.rs  boat.rs  brick.rs  bullet.rs  bullet_casing.rs  bullet_trail.rs  chat.rs  coin.rs  collider.rs  collider_groups.rs  console.rs  damage_number.rs  editor_client.rs  editor_server.rs  enemy.rs  events.rs  game.rs  game_state.rs  grenade.rs  ideas.txt  intake.rs  level.rs  lib.rs  main.rs  main_menu.rs  muzzle_flash.rs  networking.rs  physics_square.rs  pistol.rs  pixel.rs  player.rs  portal.rs  portal_bullet.rs  portal_gun.rs  radio.rs  rigid_body.rs  server.rs  shotgun.rs  sky.rs  (+10 more)
src/client/: client.rs  main.rs
src/editor/: editor.rs  main.rs  menu.rs
src/editor_client/: editor_client.rs  main.rs
src/editor_server/: editor_server.rs  main.rs
src/entities/: bullet.rs  coin.rs  mod.rs  physics_square.rs  player.rs  raft.rs  raft_component.rs  tree.rs  wood.rs  zombie.rs
src/player/: body_part.rs  mod.rs  player.rs
src/proxies/: mod.rs  rect.rs  vec2.rs
src/proxies/macroquad/: color.rs  input.rs  mod.rs
src/proxies/macroquad/math/: rect.rs  test.rs  vec2.rs
src/proxies/uuid/: lib.rs
src/resources/: coin.rs  mod.rs  wood.rs
src/server/: main.rs  server.rs
src/updater/: main.rs
