[package]
name = "liquidators"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.35", features = ["serde"] }
diff-struct = {git = "https://github.com/VoxanyNet/diff-struct", rev = "9f3990a29011bbbb84c40ca21f110ef8a1d343d0"}
macroquad = {git = "https://github.com/VoxanyNet/macroquad", rev = "76010ebc46b245eda84497f0e8764d8626223223"}
nalgebra = {git = "https://github.com/VoxanyNet/nalgebra", rev = "e780eebdce5dbfcf09a82164142295036d2904cb"}
rapier2d = { git = "https://github.com/VoxanyNet/rapier", rev = "85a707e0b01d0ca40d2d4651a7862568bcb011f9", features = ["serde-serialize"] }
#rapier2d = {path = "../rapier/crates/rapier2d", features = ["serde-serialize"]}
serde = { version = "1.0.205", features = ["serde_derive"] }
lz4_flex = { version = "0.11", default-features = false }
# ewebsock = "0.7.0"
gamelibrary = {git = "https://github.com/VoxanyNet/gamelibrary", rev = "68575aec1e5d6564b86e442fbe9cbf034b1fc04f"}
parry2d = {git = "https://github.com/VoxanyNet/parry", rev = "b1663f398302769d29de3fe9417d06fc11d0f57d"}
#gamelibrary ={ path = "../gamelibrary"}
bitcode = { version = "0.6.0", features = ["serde"] }
tungstenite = "0.23.0"
fxhash = "0.2.1"
reqwest = { version = "0.12.5", features = ["blocking"] }
gilrs = "0.11.0"
web-sys = { version = "0.3.72", features = ["console"] }
serde_yaml = "0.9.34"
futures = { version = "0.3.31", features = ["futures-executor"] }
serde_json = "1.0.140"
rand = "0.9.0"
uuid = { version = "1.16.0", features = ["v4"] }
# [[bin]]
# name = "updater"
# path = "src/updater/main.rs"

[features]
3d-audio = ["gamelibrary/3d-audio"]

[[bin]]
name = "client"
path = "src/client/main.rs"

[[bin]]
name = "server"
path = "src/server/main.rs"

[[bin]]
name = "editor-client"
path = "src/editor_client/main.rs"

[[bin]]
name = "editor-server"
path = "src/editor_server/main.rs"

[lib]
name = "liquidators_lib"
path = "src/lib.rs"

