[package]
name = "liquidators"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.35", features = ["serde"] }
diff-struct = "0.5.3"
macroquad = {git = "https://github.com/VoxanyNet/macroquad", rev = "73db4a93f90f41942995ef757499ed61f3ff6085"}
nalgebra = {git = "https://github.com/VoxanyNet/nalgebra", rev = "c57d898ac19a01ac5ad2d6da5f98dea91257ac9e"}
rapier2d = { git = "https://github.com/VoxanyNet/rapier", rev = "d2945de2055e11538e437246d5084463a9335a2e", features = ["serde-serialize"] }
#rapier2d = {path = "../rapier/crates/rapier2d", features = ["serde-serialize"]}
serde = { version = "1.0.205", features = ["serde_derive"] }
lz4_flex = { version = "0.11", default-features = false }
# ewebsock = "0.7.0"
gamelibrary = {git = "https://github.com/VoxanyNet/gamelibrary", rev = "106ecd31f3dce29e7e96de947670d38236623404"}
parry2d = {git = "https://github.com/VoxanyNet/parry", rev = "10a5155cb735ca3d2e912473b22bad2f2ad5889e"}
#gamelibrary ={ path = "../gamelibrary"}
bitcode = { version = "0.6.0", features = ["serde"] }
tungstenite = "0.23.0"
fxhash = "0.2.1"
reqwest = { version = "0.12.5", features = ["blocking"] }
gilrs = "0.11.0"
web-sys = { version = "0.3.72", features = ["console"] }
serde_yaml = "0.9.34"
futures = { version = "0.3.31", features = ["futures-executor"] }
serde_json = "1.0.140"
rand = "0.9.0"
uuid = { version = "1.16.0", features = ["v4"] }
# [[bin]]
# name = "updater"
# path = "src/updater/main.rs"

[features]
3d-audio = ["gamelibrary/3d-audio"]

[[bin]]
name = "client"
path = "src/client/main.rs"

[[bin]]
name = "server"
path = "src/server/main.rs"

[[bin]]
name = "editor-client"
path = "src/editor_client/main.rs"

[[bin]]
name = "editor-server"
path = "src/editor_server/main.rs"

[lib]
name = "liquidators_lib"
path = "src/lib.rs"

